add: offers route

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -23,6 +23,10 @@
 						<a class="nav-link" aria-current="page" th:href="@{/pizzas/create}"
 							th:classappend="${current == 'create' ? 'active' : 'non-active'}">New Pizza</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" th:href="@{/offers}"
+							th:classappend="${current == 'offers' ? 'active' : 'non-active'}">Offers</a>
+					</li>
 				</ul>
 			</div>
 
