--- a/src/main/resources/templates/pizzas/edit.html
+++ b/src/main/resources/templates/pizzas/edit.html
@@ -56,6 +56,15 @@
 						<textarea class="form-control" aria-label="With textarea" id="description"
 							th:field="*{description}"></textarea>
 					</div>
+					<!-- ingredients -->
+						<div class="form-check text-light">
+							<div th:each="ingredient : ${ingredients}">
+						  <input class="form-check-input" type="checkbox" th:value="${ingredient.id}" th:id="'ingredient-' + ${ingredient.id}" th:field="${pizza.ingredients}">
+						  <label class="form-check-label" for="'ingredient-' + ${ingredient.id}">
+						    [[${ingredient.name}]]
+						  </label>
+						  </div>
+						</div>
 					<!-- buttons-->
 					<div class="d-flex justify-content-center">
 						<button class="btn btn-success mx-2 border border-1 border-light" type="submit">Submit</button>
