--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -9,8 +9,9 @@
 		data-bs-theme="dark">
 		<div class="container">
 			<a class="navbar-brand" th:href="@{/pizzas}">Pizza Time</a>
-			<button class="navbar-toggler mb-2 mb-sm-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler mb-2 mb-sm-0" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -19,7 +20,7 @@
 						<a class="nav-link" aria-current="page" th:href="@{/pizzas}"
 							th:classappend="${current == 'pizzas' ? 'active' : 'non-active'}">Our Pizza</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN','USER')">
 						<a class="nav-link" aria-current="page" th:href="@{/pizzas/create}"
 							th:classappend="${current == 'create' ? 'active' : 'non-active'}">New Pizza</a>
 					</li>
@@ -34,11 +35,16 @@
 				</ul>
 			</div>
 
-			<form th:action="@{/pizzas}" class="d-flex" role="search">
-				<input class="form-control me-2 bkcolor" name="name" type="search" placeholder="Search">
-				<button class="btn btn-outline-light" type="submit">Search</button>
-			</form>
+				<form th:action="@{/pizzas}" class="d-flex" role="search">
+					<input class="form-control me-2 bkcolor" name="name" type="search" placeholder="Search">
+					<button class="btn btn-outline-light" type="submit">Search</button>
+				</form>
 
+		</div>
+		
+		<div class="justify-content-end mx-5 text-light"> 
+			<span sec:authentication="name"></span>
+			<span sec:authentication="principal.authorities"></span>
 		</div>
 	</nav>
 
